chart picker: prevent horizontal scroll bar

--- a/app/assets/stylesheets/fancybox.sass
+++ b/app/assets/stylesheets/fancybox.sass
@@ -25,7 +25,7 @@ div.busybox
       float: left
 
 #select_charts
-  width: 100%
+  width: 97%
   height: 100%
   padding: 20px
   h1
